--- a/_posts/2019-12-24-the-us-narrative-today.html
+++ b/_posts/2019-12-24-the-us-narrative-today.html
@@ -1667,107 +1667,107 @@ stories:
   domain: http://www.jcnews.com/
   link: https://www.jcnews.com/article/sachy-out-bond
 images:
-- name: legal-statue-legalstatue-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-bright-sand.jpg
-- name: paris-paris-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-light-dali.jpg
-- name: aws-s3-deserthills-deserthills-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-deserthills-deserthills-still.jpg
-- name: rockingchair-rockingchair-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-far-away.jpg
-- name: nazi-invasion-statue-capital-cannon.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-statue-capital-cannon.jpg
+- name: hollywood-building-hollywood-building-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-space-pizza.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-creativity.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-creativity.JPG
+- name: crow-crow-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-atari-missle.jpg
 - name: server-cloud-server-racks-clouds-space-pizza.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-space-pizza.jpg
-- name: oldsmallboat-oldsmallboat-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-dark-soul.jpg
-- name: oldhouse-oldhouse-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-monet-one.jpg
-- name: capital-battle-capitolbattle-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-blue-circuit.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-monet-one.jpg
-- name: containership-containership-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-dark-dali.jpg
-- name: stories-sand-hand-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-sand-hand-dali-three.jpg
-- name: legal-statue-legalstatue-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-plentiful.jpg
-- name: docks-docks-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-dali-two.jpg
-- name: downtown-los-angeles-downtown-la-monet-one.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-monet-one.JPG
-- name: beach-clouds-lifeguard-beachclouds-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-hot-spicy.jpg
-- name: downtown-fredericksburg-clean-view.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-clean-view.JPG
-- name: miamibeach-miamibeach-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-atari-missle.jpg
-- name: stalin-time-border-down-the-fence-line.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-border-down-the-fence-line.jpg
-- name: old-church-oldchurch-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-smoking-cigarette.jpg
-- name: mistywoods-babyfoot-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-wols.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-umberto-bocc.jpg
-- name: server-cloud-server-racks-door-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-gred-mash.jpg
-- name: trucksilo-trucksilo-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-dark-rain.jpg
-- name: yosemite-yosemite-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-colored-circuits.jpg
-- name: la-muse-castle-window_35928999923_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-castle-window_35928999923_o.jpg
-- name: crow_diego_rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_diego_rivera1.jpg
-- name: white-house-lawn-white-house-lawn-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-deep-connections.jpg
-- name: braceros-domingo-ulloa-stairs-down-blue-green.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-stairs-down-blue-green.jpg
-- name: white-house-lawn-white-house-window-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-light-dali.jpg
-- name: oldhouse-granaryfield-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-atari-missle.jpg
-- name: la-muse-fishing-ship-in-docks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-fishing-ship-in-docks.jpg
-- name: downtown-trucksilo-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-purple-pond.jpg
-- name: ellis-island-ellisisland-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-kand-two.jpg
-- name: white-house-whitehouse-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-plentiful.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-sand-paper.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-sand-paper.JPG
-- name: castle-on-hill-castle-on-hill-edinburgh-dark-rain.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-dark-rain.JPG
-- name: window-window-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-neo-instinct.jpg
-- name: meadowbutterfly-meadow-butterfly-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-ww2-dresden.jpg
-- name: walled-garden-walled-garden-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-blue-electricity.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-marcel-duchamp.jpg
-- name: fence-mexico-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-blue-electricity.jpg
-- name: border-fence-border-fence-on-hill-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-kandinsky-bv.jpg
-- name: supreme-court-supremecourt-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-colorful-blocks.jpg
-- name: old-granary-field-granaryfield-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-colorful-blocks.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-purple-pond.jpg
-- name: paris-paris-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-satan-red.jpg
-- name: mistywoods-babyfoot-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-blue-brush.jpg
-- name: mediterranean-mediterranean-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-plentiful.jpg
-- name: catacombs-catacombs-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-china-prop.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-blue-granite.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-space-pizza.jpg
+- name: stalin-time-old-church-in-field.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-church-in-field.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-ww2-color.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-ww2-color.JPG
+- name: berlinwall-DSC-0084-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-ww2-color.jpg
+- name: border-fence-border-fence-on-hill-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-dry-skin.jpg
+- name: bluelake-green-zuma-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-green-zuma-file-00-00-38-67.jpg
+- name: razorcliff-razorcliff-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-yellow-collage.jpg
+- name: locked-up-steam-lock-up-steam-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-blue-granite.jpg
+- name: art-museum-art-museum-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-blue-brush.jpg
+- name: adam-smith-adam-smith-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-dali-two.jpg
+- name: stalin-time-downtown-street-crosswalk.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-downtown-street-crosswalk.jpg
+- name: old-house-oldhouse-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-ww2-color.jpg
+- name: old-door-lock-old-door-lock-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-colorful-blocks.jpg
+- name: crow_sand_paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_sand_paper.jpg
+- name: oldroad-old-road-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-colored-circuits.jpg
+- name: ellis-island-ellisisland-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-mucha-mult.jpg
+- name: locked-up-steam-lock-up-steam-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-dark-dali.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-kand-two.jpg
+- name: stalin-time-seattle-public-market_36725946605_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-seattle-public-market_36725946605_o.jpg
+- name: paris-paris-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-pablo-blue.jpg
+- name: la-muse-dandelions-in-rocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-dandelions-in-rocks.jpg
+- name: amusement-park-amusement-park-2-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-atari-missle.jpg
+- name: bf-skinner-roman-marcus-looking-down.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-roman-marcus-looking-down.jpg
+- name: oldhotel-oldhotel-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-sunday.jpg
+- name: bf-skinner-subway-brooklyn-station.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-subway-brooklyn-station.jpg
+- name: death-valley-death-valley-national-park-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-bright-sand.jpg
+- name: stories-new-59-124-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-59-124-800-500-0-max-0--5--5.jpg
+- name: aws-s3-stories-castle-on-hill-edinburgh-propaganda-leaflets.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-castle-on-hill-edinburgh-propaganda-leaflets.JPG
+- name: downtheline-downtheline-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-graham-sutherland.jpg
+- name: old-school-house-old-schoolhouse-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-smooth-ride.jpg
+- name: la-muse-ellis-island-windows.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-ellis-island-windows.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-light-dali.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-light-dali.JPG
+- name: status-berlin-status-berlin-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-purple-storm.jpg
+- name: nyc-flag-nycflag-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-dark-dali.jpg
+- name: ellis-island-ellisisland-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-really-hot.jpg
+- name: supreme-court-supremecourt-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-free-woman.jpg
+- name: locked-up-steam-lock-up-steam-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-graham-sutherland.jpg
+- name: aws-s3-kerbypeak-kerbypeak-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-kerbypeak-kerbypeak-still.jpg
+- name: status-berlin-status-berlin-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-plentiful.jpg
+- name: aws-s3-stories-containership-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-containership-copper-circuit.jpg
+- name: cargo-ship-cargo-ship-on-sea-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-aqua.jpg
+- name: aws-s3-stories-copper-servers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-copper-servers.jpg
+- name: flower-barbed-wire-flower-barbed-wire-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-crafty-painting.jpg
+- name: crow_blue_granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_blue_granite.jpg
+- name: supreme-court-supremecourt-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-purple-storm.jpg
+- name: berlinwall2-berlinwall-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-purple-storm.jpg
+- name: oldhouse-oldhouse-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-kandinsky-bv.jpg
 ---
 Rocking New Christmas Music.&nbsp;Help Make A Childs Wish Come True This Holiday Season.&nbsp;India's Ruling Party Loses Key State Election Amid Protests.&nbsp;Prince Philip Leaves Hospital To Join Queen For Christmas.&nbsp;Ayda Field Feared Robbie Williams Would Relapse.&nbsp;Stitt's Top Tribal Adviser Steps Down, Cites Gaming Dispute.&nbsp;'Just Mercy' Aims For Justice On Death Row, And In Hollywood.&nbsp;Hoosiers Urged To Practice Ice Safety.&nbsp;
